create mentor and user hooks
