# lib/types/index.ts
@@ -13,6 +13,7 @@ export * from './bodyLoginTokenPostGrantType';
 export * from './bodyUploadFileFileUploadPost';
 export * from './commissionRequest';
 export * from './commissionResponse';
+export * from './getAllReportsMentorAllReportsGetParams';
 export * from './getProjectMentorProjectsGetParams';
 export * from './getReportsMentorReportsProjectIdGetParams';
 export * from './hTTPValidationError';
@@ -31,6 +32,10 @@ export * from './proposalSingleResponseInputFileId';
 export * from './proposalSingleResponseOutput';
 export * from './proposalSingleResponseOutputFileId';
 export * from './proposalUpdate';
+export * from './proposalUserUpdateRequest';
+export * from './proposalUserUpdateRequestFileId';
+export * from './proposalUserUpdateRequestInfo';
+export * from './proposalUserUpdateRequestRFPId';
 export * from './rFPFieldResponse';
 export * from './rFPRequest';
 export * from './rFPRequestFileId';
@@ -48,6 +53,7 @@ export * from './reportRequest';
 export * from './reportResponse';
 export * from './reportUpdate';
 export * from './searchRfpsEndpointExplorerRfpsGetParams';
+export * from './searchRfpsEndpointUsersRfpsGetParams';
 export * from './token';
 export * from './userInfoLimitedResponse';
 export * from './userInfoResponse';
